--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+/* a trained codes */
+.hidden {
+    display: none;
+}
+
+/* owened codes */
 *{
     box-sizing: border-box;
 }
@@ -6,37 +12,165 @@ body{
     height:100%;
     background: gray;
     margin: 0;
-    padding: 0;
 
+    padding-top:300px;
     font-family: 'Baloo Tammudu 2', 'Noto Sans KR', sans-serif;
 }
-header{
-    border-top:1px solid gray;
-    height:21px;
-    padding-left:20px;
-    text-align: left;
+#backgroundImage{
+    text-align: center;
 }
-main {
-    width:100%;
+#bgImage{
+    position:absolute;
+    left:0;
+    top:0;
+    z-index: -5;
+    filter:brightness(50%);
+    height:100vh;
+    width:100vh;
+    object-fit:cover;
+
+    display:block;
+    margin:0px auto;
 }
-footer{
-    border-top:1px solid gray;
-    padding:20px;
+#login-form{
+    text-align: center;
+    color:white;
+    margin:0 auto;
+}
+#login-form input:first-child{
     text-align:center;
+    color:white;
+    font-size:1.3rem;
+    padding:10px;
+    width:780px;
+    background-color: rgba(255,255,255,0.2);
+    border: none;
+    transition: all, 0.4s;
 }
-div#whole_wrapper{
-    border:1px solid gray;
+#login-form input:first-child:hover{
+    background-color: rgba(255,255,255,0.4);
 }
-.mainView{
-    margin: 0 auto;
-    padding: 0;
-    border: 1px soild gray;
-    height: 100%;
+#login-form input:hover::-webkit-input-placeholder{ /*placeholder color change*/
+    color: rgb(50, 50, 50);
 }
-.hidden {
-    display: none;
+#login-form input:first-child:focus{
+    outline:none;
+    border-bottom:1px solid white;
+    background-color:rgba(0,0,0,0);
+}
+#login-form input:nth-child(2){
+    margin-left:10px;
+    width:100px;
+    height:40px;
+    border-radius:10px;
+    border:none;
+    background-color: rgba(255,255,255,0.6);
+    color:rgb(80,80,80);
+    font-size:1rem;
+    font-weight:600;
+    box-shadow: 5px 5px 5px rgba(0,0,0,0.4);
+    outline:none;
+    cursor:pointer;
+    transition:all, 0.4s;
+}
+#login-form input:nth-child(2):hover{
+    background-color: rgba(255,255,255,0.9);
 }
 #clock{
     text-align: center;
-    font: 7rem/2 arial, verdana, "Helvetica Neue", serif;
+    height:260px;
+    font-size:8rem;
+    margin:10px;
+    color:white;
+    padding: -100px;
+    text-shadow: 5px 5px 5px rgba(0,0,0,0.4);
+    -webkit-text-stroke: 2px black;
+}
+#greeting{
+    margin:0 auto;
+    text-align: center;
+    color:black;
+    -webkit-text-stroke: 1px rgba(65, 65, 65, 0.678);
+    font-weight: 400;
+    font-size:2rem;
+    font-weight:600;
+    text-shadow: 5px 5px 5px rgba(0,0,0,0.4);
+}
+#todo-form{
+    text-align:center;
+    margin-top:0px;
+}
+#todo-form input{
+    text-align:center;
+    color:white;
+    font-size:1rem;
+    width: 540px;
+    height: 40px;
+    background-color: rgba(255, 255, 255, 0.1);
+    font-weight: 500;
+    border:none;
+    margin-bottom:20px;
+    /* margin-top:-40px; */
+    transition: all, 0.4s;
+}
+#todo-form input:hover{
+    background-color: rgba(255,255,255,0.4);
+}
+#todo-form input:hover::-webkit-input-placeholder{ /*placeholder color change*/
+    color: rgb(50, 50, 50);
+}
+#todo-form input:focus{
+    outline:none;
+    border-bottom: 1px solid white;
+    background-color:rgba(0,0,0,0);
+    color:blanchedalmond;
+}
+#todo-list{
+    text-align: center;
+}
+#todo-list li{
+    list-style: none;
+    color:rgba(250,250,250,0.8);
+    margin-top:40px;
+    margin-bottom:50px;
+    font-size:1rem;
+    width:540px;
+    margin: 0 auto;
+}
+#todo-list li:hover{
+    color:rgb(255, 166, 0);
+}
+#todo-list button{
+    margin-left:10px;
+    background-color:rgba(255,255,255,0);
+    outline: none;
+    color:white;
+    font-weight: 700;
+    width:30px;
+    height:30px;
+    border:none;
+    font-size:1.2rem;
+}
+#todo-list button:hover{
+    cursor: pointer;
+}
+#quotes{
+    text-align: center;
+    position:fixed;
+    bottom:20px;
+    margin-left: 36px;
+    font-size:1.5rem;
+    font-weight: 200;
+    color:darkred;
+}
+#weather{
+    position:fixed;
+    top:20px;
+    right:36px;
+    color:midnightblue;
+    font-size:1.4rem;
+    font-weight: 700;
+}
+#weather:hover{
+    color:rgb(255, 166, 0);
 }
